# magicweb

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.py
docs/: .firebaserc  config.toml
docs/content/: _index.md  contributinghow-to-contribute.md
docs/content/contributing/: _index.md  contributinghow-to-contribute.md  how-to-contribute.md
docs/content/getting-started/: _index.md  basicapp.md  installation.md
docs/content/newapp/: _index.md
docs/content/routes-rendering/: _index.md  creating-routes  creating-routes.md  render.md  renderhtml.md  template-inheritance.md
docs/public/: 404.html  index.html  index.xml  sitemap.xml
docs/public/categories/: index.html  index.xml
docs/public/contributing/: index.html  index.xml
docs/public/getting-started/: index.html  index.xml
docs/public/getting-started/basicapp/: index.html
docs/public/getting-started/installation/: index.html
docs/public/newapp/: index.html  index.xml
docs/public/routes-rendering/: index.html  index.xml
docs/public/routes-rendering/creating-routes/: index.html
docs/public/routes-rendering/render/: index.html
docs/public/routes-rendering/renderhtml/: index.html
docs/public/routes-rendering/template-inheritance/: index.html
docs/public/tags/: index.html  index.xml
magicweb/: __init__.py  routes.py
