[tool.poetry]
name = "Magic Web"
version = "0.0.1"
description = ""
authors = ["Israel Waldner <imky171@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
WebOb = "^1.8.7"
parse = "^1.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
